2010-11-09  Andras Becsi  <abecsi@webkit.org>

        Reviewed by Csaba Osztrogonác.

        Improve old-run-webkit-tests --verbose to show DumpTool opening/closing
        https://bugs.webkit.org/show_bug.cgi?id=49252

        * Scripts/old-run-webkit-tests:

2010-11-09  Csaba Osztrogonác  <ossy@webkit.org>

        Reviewed by Tor Arne Vestbø.

        Output of old-run-webkit-tests is buggy in verbose mode
        https://bugs.webkit.org/show_bug.cgi?id=49249

        * Scripts/old-run-webkit-tests: Redundant outputs removed.

2010-11-08  Nicolas Dufresne  <nicolas.dufresne@collabora.co.uk>

        Reviewed by Martin Robinson.

        [GTK] Link with target name set does not work
        https://bugs.webkit.org/show_bug.cgi?id=48865

        When a new page is created with a name (target=myFrame), the new
        mainFrame could not be found because they where not stored in the
        same PageGroup. As PageGroup are not exposed externally so the
        simpliest solution is to use a global page group name. This also fixes
        issue with visited link coloration across pages. After this change the
        private function webkit_web_view_set_group_name() was no longer used
        so it was removed completly.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (createWebView):

2010-11-08  John Knottenbelt  <jknotten@chromium.org>

        Reviewed by Kent Tamura.

        WebViewHost::reset() uses placement new.
        https://bugs.webkit.org/show_bug.cgi?id=49069

        WebViewHost is using placement destruction / new to simulate a fresh
        WebViewHost object at the same address. This is because the WebView remains
        open across tests and maintains a pointer to the WebViewHost.
        This change resets member variables explictly instead of the placement new dance.

        * DumpRenderTree/chromium/WebViewHost.cpp:
        (WebViewHost::WebViewHost):
        (WebViewHost::reset):

2010-11-08  Dirk Pranke <dpranke@chromium.org>
